<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TripSelectorViewController" customModule="CheapestPath" customModuleProvider="target">
            <connections>
                <outlet property="cheapestResultLabel" destination="qDG-S0-bep" id="lh4-vT-jZ6"/>
                <outlet property="fromCityLabel" destination="e47-be-V0l" id="FrR-fx-OO2"/>
                <outlet property="fromCityTextField" destination="usk-9V-jBZ" id="2t4-eh-zvZ"/>
                <outlet property="mapView" destination="mX9-Ra-9aO" id="Lx5-Q5-Nqm"/>
                <outlet property="toCityLabel" destination="5nw-E3-Rix" id="ueb-3w-aFf"/>
                <outlet property="toCityTextField" destination="qms-4g-IMP" id="9TD-6l-XcP"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="usk-9V-jBZ">
                    <rect key="frame" x="102.5" y="100" width="228.5" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="fromField"/>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qms-4g-IMP">
                    <rect key="frame" x="102.5" y="160" width="228.5" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="toField"/>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From City:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e47-be-V0l">
                    <rect key="frame" x="14" y="109" width="78.5" height="21"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To City:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5nw-E3-Rix">
                    <rect key="frame" x="14" y="169" width="78.5" height="21"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cheapest:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDG-S0-bep">
                    <rect key="frame" x="102.5" y="220" width="228.5" height="21"/>
                    <accessibility key="accessibilityConfiguration" identifier="cheapestPrice"/>
                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="mX9-Ra-9aO">
                    <rect key="frame" x="0.0" y="269" width="375" height="398"/>
                </mapView>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="qms-4g-IMP" firstAttribute="trailing" secondItem="usk-9V-jBZ" secondAttribute="trailing" id="3JR-ub-Ehf"/>
                <constraint firstItem="mX9-Ra-9aO" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="3WD-Ps-28N"/>
                <constraint firstItem="mX9-Ra-9aO" firstAttribute="top" secondItem="qDG-S0-bep" secondAttribute="bottom" constant="28" id="4x5-Ct-1ZL"/>
                <constraint firstItem="qms-4g-IMP" firstAttribute="top" secondItem="usk-9V-jBZ" secondAttribute="bottom" constant="30" id="5Af-Xa-IQu"/>
                <constraint firstItem="e47-be-V0l" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="14" id="5aL-Uh-1gd"/>
                <constraint firstItem="5nw-E3-Rix" firstAttribute="bottom" secondItem="qms-4g-IMP" secondAttribute="bottom" id="7mW-Rg-MR4"/>
                <constraint firstItem="qDG-S0-bep" firstAttribute="trailing" secondItem="qms-4g-IMP" secondAttribute="trailing" id="7oL-bp-SP1"/>
                <constraint firstItem="5nw-E3-Rix" firstAttribute="leading" secondItem="e47-be-V0l" secondAttribute="leading" id="Hd0-Ir-IGm"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="usk-9V-jBZ" secondAttribute="trailing" constant="44" id="I18-xI-86X"/>
                <constraint firstItem="usk-9V-jBZ" firstAttribute="leading" secondItem="e47-be-V0l" secondAttribute="trailing" constant="10" id="I2S-6s-S7H"/>
                <constraint firstItem="mX9-Ra-9aO" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="J1n-ba-kO1"/>
                <constraint firstItem="qDG-S0-bep" firstAttribute="leading" secondItem="qms-4g-IMP" secondAttribute="leading" id="M8P-WG-d5N"/>
                <constraint firstItem="5nw-E3-Rix" firstAttribute="trailing" secondItem="e47-be-V0l" secondAttribute="trailing" id="Pso-D8-Rlx"/>
                <constraint firstItem="e47-be-V0l" firstAttribute="bottom" secondItem="usk-9V-jBZ" secondAttribute="bottom" id="QBN-bh-nzv"/>
                <constraint firstItem="qDG-S0-bep" firstAttribute="top" secondItem="qms-4g-IMP" secondAttribute="bottom" constant="30" id="awj-6Q-mzj"/>
                <constraint firstItem="mX9-Ra-9aO" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="fi0-Pb-xA3"/>
                <constraint firstItem="qms-4g-IMP" firstAttribute="leading" secondItem="5nw-E3-Rix" secondAttribute="trailing" constant="10" id="iTT-M9-TeN"/>
                <constraint firstItem="usk-9V-jBZ" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="80" id="vaE-b3-UKy"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <point key="canvasLocation" x="138.40000000000001" y="152.47376311844079"/>
        </view>
    </objects>
</document>
